[package]
name = "wio-wifi"
version = "0.1.0"
authors = ["garasubo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "0.1"
embedded-graphics = "0.6"

[dependencies.wio_terminal]
version = "0.3"
features = ["wifi"]

[dependencies.smoltcp]
version = "0.7.1"
default-features = false
features = ["proto-ipv4", "socket-tcp"]